--- a/contact me.html
+++ b/contact me.html
@@ -9,7 +9,7 @@
 <body>
     <h1>My contact details</h1>
        <p> whatsapp numer 3748979</p> 
-       <a href="https://www.facebook.com/">facebook</a> 
+       <a href="https://">facebook</a> 
         <p>my fictional address</p>
         <p>myemail@gmail.com</p>
         <hr>
