--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <hr>
    <h3>Education and Courses</h3>
    <ul>
-    <li><a href="https://hurbad.com/members/sate/courses/"> computer networking </a> </li>
+    <li><a href="https://hurbad.com"> computer networking </a> </li>
     <li> web development</li>
    </ul>
    <hr>
